--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 :root{
@@ -676,7 +675,7 @@ font-weight: 500;
     }
 
 }
-=======
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 :root{
@@ -1353,4 +1352,7 @@ font-weight: 500;
     }
 
 }
->>>>>>> ae0b05deb7c437b11b56ff9ea1620dd7394fe3e2
+
+ ae0b05deb7c437b11b56ff9ea1620dd7394fe3e2
+
+ {height: 1px;}
