--- a/styles.css
+++ b/styles.css
@@ -389,6 +389,7 @@ font-weight: 500;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    padding: 10px;
 }
 
 .gallery2 img{
@@ -1168,7 +1169,7 @@ font-weight: 500;
 
 .social-icons span i{
     color: #fff;
-    font-size: 1.2rem;
+    font-size: 2.2rem;
 }
 
 .instagram{
@@ -1326,11 +1327,13 @@ font-weight: 500;
     .gallery{
         grid-template-rows: repeat(2, 20rem);
     }
-    
-    .contact-info ul,
-    .information ul{
-        display: none;
+
+    .social-icons span{
+        height: 40px;
+        width: 40px;
     }
+
+ 
 
     .contact-info {
         align-items: center;
@@ -1350,4 +1353,6 @@ font-weight: 500;
     .search-form{
         display: none;
     }
+
+    
 }
