--- a/product.css
+++ b/product.css
@@ -644,15 +644,31 @@ margin-top: 25px;
     display: none;
 }
 
+
 .price{
-    font-size: 12px;
-    border-bottom: 1px solid #e4e4e4;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 15px;
+    text-decoration: line-through;
+    font-size: 18px;
+    font-weight: 900;
+    text-align: end;
+    color: gray;
 }
 
+.discount{
+    font-size: 18px;
+    font-weight: 900;
+    text-align: end;
+    text-decoration: none;
+    color: black;
+}
+
+.discount-badge {
+    background-color: #e63946;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 2px 6px;
+    border-radius: 5px;
+}
 
     /* Footer */
 .footer{
