--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,6 @@ html{
 
 .heading-1{
     text-align: center;
-    font-weight: 500px;
     font-size: 3rem;
 }
 
@@ -329,10 +328,22 @@ font-weight: 500;
 /* Main */
 .container-items{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 70px;
-    margin: 50px;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); /* más responsivo */
+    gap: 40px;
+    margin: 50px auto;
     cursor: pointer;
+    justify-items: center; /* Centra los items dentro de cada celda */
+    justify-content: center; /* Centra el grid completo si hay menos columnas */
+}
+
+.container-masc{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 40px;
+    margin: 50px auto;
+    cursor: pointer;
+    justify-items: center; /* Centra los items dentro de cada celda */
+    justify-content: center; /* Centra el grid completo si hay menos columnas */
 }
 
 .item{
@@ -389,6 +400,14 @@ font-weight: 500;
 }
 
 .price{
+    text-decoration: line-through;
+    font-size: 18px;
+    font-weight: 900;
+    text-align: end;
+    color: gray;
+}
+
+.discount{
     font-size: 18px;
     font-weight: 900;
     text-align: end;
@@ -396,16 +415,27 @@ font-weight: 500;
     color: black;
 }
 
-/* GALLERY */
-.gallery {
-    display: grid;
-    gap: 1.5rem;
-    margin-bottom: 30px;
+.discount-badge {
+    background-color: #e63946;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 2px 6px;
+    border-radius: 5px;
 }
 
+/* GALLERY */
+.gallery {
+    grid-column: 1 / -1;
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+
 .gallery img{
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    height: auto;
     object-fit: cover;
     padding: 10px;
 }
@@ -432,6 +462,7 @@ font-weight: 500;
     flex-direction: column;
     gap: 2rem;
     margin-bottom: 3rem;
+    align-items: center;
 }
 
 /* Femeninas */
@@ -732,7 +763,7 @@ body {
     }
     
     .container-items{
-        grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 1rem;
     }
 
